--- a/app/src/main/res/layout/activity_lista_notas.xml
+++ b/app/src/main/res/layout/activity_lista_notas.xml
@@ -6,4 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".ui.activity.ListaNotasActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
