--- a/app/src/main/res/layout/activity_formulario_nota.xml
+++ b/app/src/main/res/layout/activity_formulario_nota.xml
@@ -32,4 +32,12 @@
         app:layout_constraintStart_toStartOf="@id/formulario_nota_titulo"
         app:layout_constraintTop_toBottomOf="@id/formulario_nota_titulo" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:orientation="horizontal"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
