implementando recycler view de cores

--- a/app/src/main/res/layout/activity_formulario_nota.xml
+++ b/app/src/main/res/layout/activity_formulario_nota.xml
@@ -35,9 +35,11 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="0dp"
         android:layout_height="50dp"
+        android:orientation="horizontal"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:orientation="horizontal"/>
+        tools:listitem="@layout/item_cor" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
