--- a/app/src/main/res/layout/activity_formulario_nota.xml
+++ b/app/src/main/res/layout/activity_formulario_nota.xml
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/formulario_nota_constraint_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -33,6 +35,7 @@
         app:layout_constraintTop_toBottomOf="@id/formulario_nota_titulo" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/formulario_lista_cores_recyclerview"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:orientation="horizontal"
