Adicionando cor as notas

--- a/app/src/main/res/layout/item_nota.xml
+++ b/app/src/main/res/layout/item_nota.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/cardView"
+    android:id="@+id/item_nota_constraint_layout"
+    android:background="#FFFFFF"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp">
