--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,4 +7,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="AlertDialog.AppCompat.TelaCheia" parent = "Theme.AppCompat.NoActionBar">
+        <item name = "android:windowFullscreen">true</item>
+
+    </style>
+
 </resources>
